# models/password_reset.go
@@ -5,15 +5,11 @@ import (
 	"time"
 )
 
-type User struct {
+type PasswordReset struct {
 	ID        uint      `json:"id" gorm:"primaryKey;autoIncrement" example:"1"`
-	FirstName string    `json:"first_name" gorm:"type:varchar(128)" example:"Raaj"`
-	LastName  string    `json:"last_name" gorm:"type:varchar(128)" example:"Patel"`
-	Email     string    `json:"email" gorm:"type:varchar(128)" example:"the@raajpatel.dev"`
-	Password  string    `json:"password" gorm:"type:varchar(128)" example:"hashed string..."`
-	Role      string    `json:"role" gorm:"type:varchar(128);" example:"user"`
-	CompanyID uint      `json:"company_id" gorm:"type:integer" example:"1"`
-	Company   Company   `json:"company" gorm:"foreignKey:CompanyID"`
+	UUID      string    `json:"uuid" gorm:"type:varchar(128)" example:"1234-1234-1234-1234"`
+	UserID    uint      `json:"user_id" gorm:"type:integer" example:"1"`
+	User      User      `json:"user" gorm:"foreignKey:UserID"`
 	CreatedAt time.Time `json:"created_at" example:"2020-01-01T00:00:00Z"`
 	UpdatedAt time.Time `json:"updated_at" example:"2020-01-01T00:00:00Z"`
 }
